config/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-nginx-ingress
  namespace: ukf
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: devops.ukf.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-nginx-service
                port:
                  number: 80
